<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.anilosman.com.alarnsheduler.AlarmActivity">

    <ImageView
        android:id="@+id/clock_image"
        android:src="@drawable/alarm_clock"
        android:layout_marginTop="22dp"
        android:layout_width="@dimen/medium_image"
        android:layout_height="@dimen/medium_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/time_text"
        android:text="@string/wake_up"
        android:textSize="@dimen/large_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clock_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/stop_button"
        android:text="@string/stop_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_text"
        android:layout_alignLeft="@+id/time_text"
        android:layout_alignStart="@+id/time_text"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/stop_text"
        android:layout_below="@+id/stop_button"
        android:layout_alignLeft="@+id/clock_image"
        android:layout_alignStart="@+id/clock_image"
        android:text="@string/stop_alarm_text"
        android:textSize="@dimen/small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/snooze_button"
        android:text="@string/snooze_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stop_button"
        android:layout_alignBottom="@+id/stop_button"
        android:layout_alignRight="@+id/time_text"
        android:layout_alignEnd="@+id/time_text" />

    <TextView
        android:id="@+id/snooze_text"
        android:layout_below="@+id/snooze_button"
        android:layout_alignRight="@+id/clock_image"
        android:layout_alignEnd="@+id/clock_image"
        android:text="@string/snooze_text"
        android:textSize="@dimen/small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>
